--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [EVENT-REMINDER]
-; for names without '/' or '\', the programme will look in the main dir, otherwise it will interpret it as a full path
-event-file=./events
+; for names without '/' or '\' the programme will look in the main dir, otherwise it will interpret it as a full path
+; use \\ on Windows
+event-file=events
 ; 1 to log number of events found per execution
-log-day=0
+log-day=1
