--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-#nothing I guess
+#results of `pip freeze`
+#I'm perplexed
+astroid==2.5.6
+colorama==0.4.4
+isort==5.8.0
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+pylint==2.8.2
+toml==0.10.2
+wrapt==1.12.1
