--- a/events.sample
+++ b/events.sample
@@ -1,5 +1,6 @@
 # a comment
 30 2 * Mr. Nobody; birthday
-* * 6 Sunday; have a relaxing day!
+* * 7 Sunday; have a relaxing day!
 # a comment to separate sections ###
-28-31 * * thing; before end of month; very important!
+1-4 * * new month reminder; very important; don't forget it!
+3/5, 1-3,10-12 6,7 An unusual event; how very unusual
