--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,16 @@
 *.log
 __pycache__/
 build/
+dist/
+*.exe
+*.spec
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
 # Environments
 venv/
 
+# Project files
 events
